*Read addressbook for template fields after entering a name in the to field
*map van e-mail gecomprimeerd opslaan
*Birthday events
*Configure which calendars show on summary screen
*HTML notes


Version 2.17-alpha
-Move module theme items to module dir
-Modular select dialog (Done with global search).
-Select and sort columns to display in tables
-global search
-link email (Pro only)
-Better auto add contacts in mail
-TNEF (Winmail.dat) support
-Reports module to show different queries on addressbook. Can also be used to send
 mailings with MS Office, Open-Office and the GO e-mail client. Replaces old mailing 
 system (Pro only)
-New e-mail counter always in top menu bar and beep can be disabled when new mail 
 arrives
-Option to show attachment paperclips and priorities in e-mail client. Slows it down when
 enabled!
-Don't create a personal addressbook by default for everyone.
-Edit multiple contacts at once
-Show month name on top of calendar print



CHANGELOG
2007/04/03 Version 2.16-13
-Security issue: A logged in user could read another user's e-mail with some tricks
-Saved e-mails couldn't be read (Pro version)
-Calendar admins always have access to events
-Updated Catalan language


2007/03/08 Version 2.16-12
-Fixed mailto links in e-mail
-Don't set session.save_path because PHP garbage collection doesnt work then 
 anymore. This resulted in a lot of session files in the tmp dir at some distro's
-Autocomplete users only put in a , in the text field. Also an Invalid XML bug was fixed.
-You didn't fill in all required fields bug at registration and profile update

Language updates:
-German language update
-Added Turkish language

2007/02/05 Version 2.16-11
-Fixed some corrupt files

2007/02/05 Version 2.16-10

Bug fixes:
-Files with quotes went wrong in filesystem
-Missing image for adding users
-html chars in pulldown of email module
-Allow duplicate email addresses with differt names in autocomplete
-Sync recurrence 1 day minus bug