@@ -379,3 +379,5 @@ $strMoveUp='Move up one row';
 
 $strAddressAndNo='Address / No.';
 $strWorkAddressAndNo='Workaddress / No.';
+
+$config_help_url='http://docs.group-office.com/index.php?folder_id=49&file_id=202';
